--- a/views/games/chill.ejs
+++ b/views/games/chill.ejs
@@ -1,5 +1,8 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <%- include('../partials/header') %>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
 
 <div class="navbar"> 
     <a href='/chillcategories' class="back">
@@ -35,8 +38,23 @@
                     </div>
                     <% }) %> 
                 </div>
-                <button style="margin-left: 40vw; background-color: blueviolet;">share</button> 
-
+                <div id = "share-fact">
+                    <button style="background-color: blueviolet;">share</button> 
+                    <button type="button" data-toggle="modal" data-target="#fact" style="background-color: green;">search</button>
+                </div>
+                <!-- Modal -->
+                        <div class="modal fade" id="fact" role="dialog">
+                            <div class="modal-dialog">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    OTRIVIA search engine
+                                </div>
+                                <script async src="https://cse.google.com/cse.js?cx=9e105dffdb443a09d"></script>
+                                <div class="gcse-search"></div>         
+                            </div>
+                        </div>
+                <!-- Modal -->
+                       
                 <script>
 
                     $(function () {
@@ -72,10 +90,6 @@
     </div>    
     <button style="margin-top: 10px; margin-left: 10vw;" onclick='check()' id="fix" class="big-button">Peek &#x1F440;</button>
     <button style="display: none;"type="submit" value="Submit">
-
-
-
-
 <script>
     function check(){
 
@@ -89,11 +103,6 @@
             correct.checked = false;
             }); 
          }, 1000);
-
-       
-
-
-
     }
     
 </script>
