--- a/views/games/share.ejs
+++ b/views/games/share.ejs
@@ -1,4 +1,20 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
 <%- include('../partials/header') %>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+
+<script>
+    var imgArray = new Array();
+    imgArray[0] = 'https://imagizer.imageshack.com/v2/150x100q90/922/qceWOn.png';
+    imgArray[1] = 'https://imagizer.imageshack.com/v2/150x100q90/924/k8Rj18.png';
+    imgArray[2] = 'https://imagizer.imageshack.com/v2/150x100q90/923/Ehxibc.png';
+    imgArray[3] = 'https://imagizer.imageshack.com/v2/150x100q90/923/SMhEDh.png';
+</script>
+
+  
+
 
 <div class="navbar"> 
     <a href='/home' class="back">
@@ -10,7 +26,7 @@
 </div>
 <div id="share-page">
     <div id="avatarscore">
-        <img  id="shareavatar" class="useravatar" src=""> 
+        <img  id="shareavatar" class="useravatar" src="" data-toggle="modal" data-target="#friend">
 
         <div id="new-score">
 
@@ -28,6 +44,59 @@
     document.getElementById('shareavatar').setAttribute('src', localStorage.getItem('avatar'));
 </script>
 
+
+<div class="modal fade" id="friend" role="dialog">
+    <div class="modal-dialog">
+    
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title" id="user">You are in the lead!</h4>
+          </div>
+          <div class="modal-body">
+             
+            <table>
+              <tr>
+                <th colspan="2">Friends Scoreboard</th>
+                
+              </tr>
+              <tr class="table-scores">
+                <td><img  id="friendavatar" class="useravatar" src=""></td>
+                <td><%- total %></td>
+              </tr>
+              <tr class="table-scores">
+                <td><img class="useravatar friendavatars" src=""></td>
+                <td>-</td>
+              </tr>
+              <tr class="table-scores">
+                <td><img class="useravatar friendavatars" src=""></td>
+                <td>-</td>
+              </tr>
+              <tr class="table-scores">
+                <td><img class="useravatar friendavatars" src=""></td>
+                <td>-</td>
+              </tr>
+              <tr class="table-scores">
+                <td><img class="useravatar friendavatars" src=""></td>
+                <td>-</td>
+              </tr>
+              
+            </table>
+  
+          </div>
+  </div>
+  <script>
+      
+      document.getElementById('friendavatar').setAttribute('src', localStorage.getItem('avatar'));
+
+      for(let index=0; index<4; ++index) {
+      console.log(index);
+      document.getElementsByClassName('friendavatars')[index].setAttribute('src', imgArray[index]);
+   }
+
+
+  </script>
 <%- include('../partials/footer') %>
 
 
