--- a/views/partials/modals.ejs
+++ b/views/partials/modals.ejs
@@ -53,7 +53,7 @@
           <img  id="normalavatar" class="useravatar" src=""> 
           <table>
             <tr>
-              <th>Score (Max 10)</th>
+              <th>Score</th>
               <th>Time Taken</th>
             </tr>
             <tr class="table-scores">
