--- a/views/intro/authentication.ejs
+++ b/views/intro/authentication.ejs
@@ -13,7 +13,7 @@
   </div>
 
   
-  <div id="autherization-page">
+  <div id="authorization-page">
     <div id="snaplogin">
       <div id="my-login-button-target"></div>
     </div>
