fixed search box

--- a/views/games/chill.ejs
+++ b/views/games/chill.ejs
@@ -50,7 +50,7 @@
                                     OTRIVIA search engine
                                 </div>
                                 <script async src="https://cse.google.com/cse.js?cx=9e105dffdb443a09d"></script>
-                                <div class="gcse-search"></div>         
+                                <div class="gcse-search" data-mobileLayout="disabled"></div>
                             </div>
                         </div>
                 <!-- Modal -->
