--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -420,6 +420,16 @@ fieldset{
   font-family: sans-serif;
   font-size: 8px;
 }
+/*********************************************** game/chill.ejs ****************************************************/
+form.gsc-search-box{
+  font-size: 13px;
+    margin-top: 0;
+    margin-right: 0;
+    margin-bottom: 4px;
+    margin-left: 0;
+    width: 100%;
+    height: auto;
+}
 
 /*********************************************** game/score.ejs ****************************************************/
 #scorepage{
