--- a/views/games/party.ejs
+++ b/views/games/party.ejs
@@ -76,7 +76,7 @@
                     <% }) %>  
                 </div>
             </fieldset>
-        <script>
+           <script>
 
                 $(function () {
 
@@ -88,7 +88,7 @@
                     }
 
                     const name = `choicefor${num}`;
-                    document.getElementById('choices').setAttribute('id', 'chosen');
+                    document.getElementById('choices').setAttribute('id', `chosen${num}`);
 
                     for(let radionum = 0; radionum<4; ++radionum)
                     {
