--- a/views/games/score.ejs
+++ b/views/games/score.ejs
@@ -30,7 +30,7 @@
           <p style="display: none;"id="scores"><%- score %></p>
           <p style="display: none;" id="times"><%- time %></p>
 
-          <p id="score">Score <%- score %>/10</p>
+          <p id="score">Score <%- score %>/20</p>
           <p id="time">Time <%- time %></p>
         </div>
     </div>
@@ -38,7 +38,7 @@
         
         <table>
           <tr>
-            <th>Score (Max 10)</th>
+            <th>Score</th>
             <th>Time Taken</th>
           </tr>
           <tr class="table-scores">
