--- a/views/games/party.ejs
+++ b/views/games/party.ejs
@@ -15,7 +15,7 @@
 <script>
     window.onload = function(){
         // The data/time we want to countdown to
-        var countDownDate = new Date().getTime()+ (1 * 60 * 1000 + 2);
+        var countDownDate = new Date().getTime()+ (30 * 1000 + 1);
 
         // Run myfunc every second
         var myfunc = setInterval(function() {
