--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,7 @@
   .navbar{
     top: 0;
     font-size: 30px;
+    height: 10vh;
     width: 100%;
     color: var(--colorShadeE);
     border: ridge 2px var(--colorShadeE);
@@ -68,8 +69,8 @@
 
     #authorization-page{
       font-family: sans-serif;
-      height: 88vh;
       width: 100%;
+      height: 90vh;
       max-width: 100%;
       overflow: hidden;
       background-color: var(--colorShadeA);
@@ -120,7 +121,6 @@
       outline: none;
       overflow: hidden;
       margin: 1vw;
-      padding-left: 0.5%;
       width: 100px;
       height: 100px;
     }
@@ -141,6 +141,8 @@
       margin: 0px 5px;
     }
       #image-preview{
+        border-radius: 100%;
+        margin: auto;
         display: none;
       }
     #image-form {
@@ -547,7 +549,6 @@ form.gsc-search-box{
   @media only screen and (max-width: 900px) {
     .avatar {
       margin: 2px;
-      padding-left: 0;
     }
     .useravatar{
       width: 100px;
