--- a/views/games/party.ejs
+++ b/views/games/party.ejs
@@ -59,7 +59,7 @@
                 <div class="question">
                     <%-question.question%>
                 </div>
-                <div id = "choices">
+                <div id = "choices" class="choice-box">
                     <%choices = `choice${index}`%>
                     <div class="choices">
                         <input type="radio" name="choices" value="correct" class="radio">
@@ -109,7 +109,7 @@
                     <div class="question">
                         <%-question.question%>
                     </div>
-                    <div id = "choices">
+                    <div id = "choices" class="choice-box">
                         <%choices = `choice${index}`%>
                         <div class="choices">
                             <input type="radio" name="choices" value="correct" class="radio">
@@ -135,7 +135,7 @@
                         }
     
                         const name = `choicefor${num}`;
-                        document.getElementById('choices').setAttribute('id', 'chosen');
+                        document.getElementById('choices').setAttribute('id', `chosen${num}`);
     
                         for(let radionum = 0; radionum<4; ++radionum)
                         {
